# HTTP

./: .gitignore  Cargo.toml  README.md
c_network/: xmake.lua
c_network/scripts/: index.js  index.sh
c_network/src/: count_line.c  download.c  selectserver.c  tcpclient.c  tcpserver.c  tcpserver.h  thread_server.c
c_network/src/lib/: _queue.c  _queue.h
c_network/src/memory/: allocated.c  index.md  memory_mmap_file.c  mmap.c  usagememory.c
c_network/src/memory/shared_memory/: Makefile  destory_shmem.c  readshmem.c  shared_memory.c  shared_memory.h  writeshmem.c
doc/: TCP.md  TCP_fragmentation.md
golang/mimt/: main.go
golang/tcpfragmentation/: go.mod
golang/tcpfragmentation/client/: main.go
golang/tcpfragmentation/server/: main.go
mimt/: go.mod
src/: arp.rs  http_proxy.rs  https.rs  https_server.rs  main.rs  ping.rs  small_chat.rs
src/network/: arp.rs  ether.rs  macaddr.rs  mod.rs
utils/: arp.drawio  ip.drawio
