[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.1"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
tokio = { version = "1.32.0", features = ["full"] }
http = "0.2.11"
tokio-rustls = "0.24.1"
libc = { version = "0.2.150", features = ["use_std", "align"] }
ifstructs = "0.1.1"
pnet = "0.34.0"

[[bin]]
name = "https_server"
path = "src/https_server.rs"

[[bin]]
name = "http_proxy"
path = "src/http_proxy.rs"

[[bin]]
name = "small_chat"
path = "src/small_chat.rs"

[[bin]]
name = "arp"
path = "src/arp.rs"

[[bin]]
name = "ping"
path = "src/ping.rs"
