[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
http = "1.1.0"
libc = { version = "0.2.150", features = ["use_std", "align"] }
ifstructs = "0.1.1"
pnet = "0.35.0"
http-body-util = "0.1.2"
hyper-util = "0.1.5"
bytes = "1.6.0"

[[bin]]
name = "http_proxy"
path = "src/http_proxy.rs"

[[bin]]
name = "small_chat"
path = "src/small_chat.rs"

[[bin]]
name = "arp"
path = "src/arp.rs"

[[bin]]
name = "ping"
path = "src/ping.rs"
